<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data >
            <import type="com.ahbap.android.app.dataservicelib.Entity"/>
            <import type="com.ahbap.android.app.crapsgames.view.ActivityRegisterListener"/>
            <variable name="entity" type="Entity" />
            <variable name="views" type="ActivityRegisterListener" />

    </data>

<LinearLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register"
    android:background="@drawable/img_1"
    android:gravity="center"

    >
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/edit_text_name"
        android:background="@color/cardview_shadow_start_color"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:text="@={entity.name}"
        android:textColorHint="@color/grey"
        android:textSize="25dp"
        android:textFontWeight="@integer/material_motion_duration_medium_2"
        android:fontFamily="monospace"
        android:drawableLeft="@drawable/baseline_drive_file_rename_outline_24"
        android:drawablePadding="15dp"




         />

    <EditText
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/edit_text_email"
        android:background="@color/cardview_shadow_start_color"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:text="@={entity.nickName}"
        android:textStyle="italic"
        android:textSize="25dp"
        android:textFontWeight="@integer/material_motion_duration_medium_2"
        android:fontFamily="monospace"
        android:drawableLeft="@drawable/baseline_alternate_email_24"
        android:drawablePadding="15dp"
        />

    <EditText
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/edit_text_password"
        android:background="@color/cardview_shadow_start_color"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:text="@={entity.password}"
        android:textSize="25dp"
        android:textFontWeight="@integer/material_motion_duration_medium_2"
        android:fontFamily="monospace"
        android:drawableLeft="@drawable/rounded_asterisk_24"
        android:drawablePadding="15dp"
        />

    <EditText
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/edit_text_confirm_password"
        android:background="@color/cardview_shadow_start_color"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:text="@={entity.confirmedPassword}"
        android:textSize="25dp"
        android:textFontWeight="@integer/material_motion_duration_medium_2"
        android:fontFamily="monospace"
        android:drawableLeft="@drawable/rounded_asterisk_24"
        android:drawablePadding="15dp"
        />

        <Button
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/button_text_register"
            android:textSize="18dp"
            android:onClick="@{() -> views.handlerGetButtonClicked()}"
            android:fontFamily="monospace"
            android:textStyle="italic"
            />
        <Button

            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/buton_text_close"
            android:textSize="18dp"
            android:onClick="@{() -> views.handlerCloseButtonClicked()}"
            android:fontFamily="monospace"
            android:textStyle="italic"
            />
    </LinearLayout>
</LinearLayout>
</layout>