<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.ahbap.android.app.crapsgames.view.ActivityMainListener"/>
        <import type="com.ahbap.android.app.crapsgames.view.user.UserInfo"/>
        <variable name="views" type="ActivityMainListener" />
        <variable name="user" type="UserInfo" />


    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_main_xml"
        tools:context=".MainActivity">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mode"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"


            >
            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="250dp"

                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/edit_text_nickname"
                android:drawableLeft="@drawable/baseline_alternate_email_24"
                android:drawablePadding="15dp"
                android:background="@drawable/round"
                android:textColor="@color/white"
                android:text="@={user.nickname}"
                android:textSize="20dp"
                android:textFontWeight="@integer/material_motion_duration_short_2"
                android:textStyle="italic"
                android:textColorHint="@color/white"
                android:fontFamily="monospace"

                />

            <EditText

                android:layout_marginTop="5dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/edit_text_password"
                android:background="@drawable/round"
                android:drawableLeft="@drawable/rounded_asterisk_24"
                android:drawablePadding="15dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:text="@={user.pass}"
                android:textStyle="italic"
                android:textSize="20dp"
                android:textFontWeight="@integer/material_motion_duration_medium_2"
                android:fontFamily="monospace"



                />
            <LinearLayout
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"


                >

                <Button
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="78dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/mor1"
                    android:text="@string/button_text_login"
                    android:textSize="18dp"
                    android:onClick="@{() -> views.handlerLoginClicked()}"
                    android:fontFamily="monospace"
                    android:textStyle="italic"
                    />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="75dp"
                    android:layout_weight="1"
                    android:text="@string/button_text_register"
                    android:onClick="@{() -> views.handlerRegisterClicked()}"
                    android:backgroundTint= "@color/cardview_shadow_end_color"
                    android:textSize="18dp"
                    android:fontFamily="monospace"
                    android:textStyle="italic"

                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>