<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
             <import type="com.ahbap.android.app.crapsgames.converter.UserConverter"/>
             <import type="com.ahbap.android.app.crapsgames.converter.BotConverter"/>
             <import type="com.ahbap.android.app.crapsgames.converter.RandomConverter"/>
             <import type="com.ahbap.android.app.crapsgames.view.ActivityLoginListener"/>
             <variable name="user" type="int" />
             <variable name="bot" type="int" />
             <variable name="muser" type="int" />
             <variable name="mbot" type="int" />
             <variable name="random" type="int" />
             <variable name="mrand" type="String" />
             <variable name="views" type="ActivityLoginListener" />
    </data>
<LinearLayout

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@drawable/img2"

    >
    <ImageView
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/mode"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:hint="@string/login_text_view_0"
        android:textColor="@color/white"
        InputType="Number"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:textColorHint="@color/white"
        android:background="@drawable/view"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:layout_gravity="center"
        android:text="@={mrand}"


        />
       <TextView
           android:layout_marginTop="10dp"
           android:layout_width="250dp"
           android:layout_height="75dp"
           android:hint="@string/login_text_view_0"
           android:textColor="@color/white"
           InputType="Number"
           android:textStyle="bold"
           android:textSize="20dp"
           android:gravity="center"
           android:textColorHint="@color/white"
           android:background="@drawable/view"
           android:backgroundTint="@color/cardview_shadow_start_color"
           android:layout_gravity="center"
           android:text="@={RandomConverter.INSTANCE.toStr(random)}"


           />

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:gravity="center"

        >

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:hint="@string/text_view_user"
        android:textColor="@color/black"
        android:text="@string/text_view_user"
        android:textStyle="bold"
        android:textSize="30dp"
        android:gravity="center"


        />
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:hint="@string/login_text_view_0"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:background="@drawable/view"
        android:backgroundTint="@color/cardview_shadow_start_color"
        InputType="Number"
        android:textSize="30dp"
        android:gravity="center"

        android:text="@={UserConverter.INSTANCE.toStr(user)}"


        />
        <TextView
            android:layout_marginStart="15dp"
            android:layout_marginLeft="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:hint="@string/login_text_view_0"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            android:background="@drawable/view"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:textSize="30dp"
            InputType="Number"
            android:gravity="center"
            android:text="@={BotConverter.INSTANCE.toStr(bot)}"


            />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:hint="@string/text_view_bot"
            android:textColor="@color/black"
            android:text="@string/text_view_bot"
            android:textStyle="bold"
            android:textSize="30dp"
            android:gravity="center"


            />

    </LinearLayout>

    <Button
        android:layout_marginTop="30dp"
        android:layout_marginLeft="85dp"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:text="@string/button_text_get"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="center"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:onClick="@{() -> views.handlerGetButtonClicked()}"

        />








</LinearLayout>
</layout>